--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
 
   <!-- This <div> is just so each button will be on its own line -->
-  <div>
+  <div class="btn-big">
     <a class="btn" href="#">Primary button</a>
   </div>
-<div>
-  <a class="btn" href="#">Subtle button</a>
+<div class="btn-small">
+  <a class="btn-subtle" href="#">Subtle button</a>
 </div>
-<div>
-  <a class="btn" href="#">Ghost button</a>
+<div class="btn-small">
+  <a class="btn-goast" href="#">Ghost button</a>
 </div>
-<div>
-  <a class="btn" href="#">Warning button</a>
+<div class="btn-big">
+  <a class="btn-warning" href="#">Warning button</a>
 </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
