--- a/index.html
+++ b/index.html
@@ -10,18 +10,43 @@
 
   <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn" href="#">Primary button</a>
+    <a class="btn btn-primary" href="#">Primary button</a>
   </div>
   <div>
-    <a class="btn-subtle" href="#">Subtle button</a>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
   </div>
   <div>
-    <a class="btn-goast" href="#">Ghost button</a>
+    <a class="btn btn-ghost btn-ghost-more" href="#">Ghost button</a>
   </div>
   <div>
-    <a class="btn-warning" href="#">Warning button</a>
+    <a class="btn btn-warning" href="#">Warning button</a>
   </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
+  <div>
+    <a class="btn-small small-info btn-primary" href="#">Primary button small</a>
+  </div>
+  <div>
+    <a class="btn-small small-info btn-subtle" href="#">Subtle button small</a>
+  </div>
+  <div>
+    <a class="btn-small small-info btn-ghost btn-ghost-more" href="#">Ghost button small</a>
+  </div>
+  <div>
+    <a class="btn-small small-info btn-warning" href="#">Warning button small</a>
+  </div>
+
+  <div>
+    <a class="btn-big big-info btn-primary" href="#">Primary button big</a>
+  </div>
+  <div>
+    <a class="btn-big big-info btn-subtle" href="#">Subtle button big</a>
+  </div>
+  <div>
+    <a class="btn-big big-info btn-ghost btn-ghost-more" href="#">Ghost button big</a>
+  </div>
+  <div>
+    <a class="btn-big big-info btn-warning" href="#">Warning button big</a>
+  </div>
 
 </body>
 </html>
